8224035: Replace wildcard address with loopback or local host in tests - part 9
Reviewed-by: dfuchs